<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login_textView">Login</string>
    <string name="login_name">login name</string>
    <string name="password">password</string>
    <string name="radio_button">RadioButton</string>
    <string name="check_box">CheckBox</string>
    <string name="switch_message">What does this do?</string>
    <string name="dialog_message">Do you want to go back?</string>
    <string name="dialog_title">Exit</string>
    <string name="action_oK">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="infoToShare">ListItemsActivity passed: My information to share</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="preference_name">my_preference</string>
    <string name="email_key">email_key</string>
    <string name="start_chat">Start Chat</string>
    <string name="send_message">SEND</string>>
    <string name="new_text">New Text</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Start_Toolbar">Test Toolbar</string>
    <string name="about_message">Version 1.0, by Huayi(Justin) Geng</string>
    <string name="action_one_message">You selected item 1</string>
    <string name="new_message">New Message</string>
    <string name="weather_forecast">WeatherForecast</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>


</resources>