<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_message"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        tools:ignore="ContentDescription" />
</GridLayout>